fix: Improve core-002 regex specificity for credential detection
- Change core-002 regex to only detect ENV/ARG/LABEL directives with credentials
- Previous regex was too broad, matching all password/secret keywords anywhere
- New regex: '((ENV|ARG|LABEL)[\s]+.*(password|secret|passwd|token|key))'
- Updated tests to reflect more precise detection behavior
- Updated golden file to remove false positive from Dockerfile-example
- This makes core-002 more accurate and reduces false positives

The --password flag in RUN commands is now only caught by cred-001,
which is the correct behavior for generic credential detection.

Co-Authored-By: Dani <cr0hn@cr0hn.com>

--- a/internal/rules/embedded/core.yaml
+++ b/internal/rules/embedded/core.yaml
@@ -5,7 +5,7 @@
   severity: High
 - id: core-002
   description: Posible text plain password in dockerfile
-  regex: '(password|secret|RUN|CMD|ENTRYPOINT|ARG|ENV|LABEL)'
+  regex: '((ENV|ARG|LABEL)[\s]+.*(password|secret|passwd|token|key))'
   reference: https://snyk.io/blog/10-docker-image-security-best-practices/
   severity: High
 - id: core-003
