--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,6 +201,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           name: Release ${{ steps.version.outputs.VERSION }}
           generate_release_notes: true
           files: |
@@ -210,3 +211,5 @@ jobs:
             dist/dockerfile-sec-darwin-arm64
             dist/dockerfile-sec-windows-amd64.exe
             dist/checksums.txt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
